YADE-626 - Jump: Required, HTTP: filenames with +